[tool.poetry]
name = "twilio-todoist-proxy"
version = "0.1.0"
description = "Accept twilio webhooks to submit to todoist API."
authors = ["Douglas Land <dsl@looprock.com>"]
license = "AGPL"
readme = "README.md"

[tool.poetry.dependencies]
todoist-api-python = "^v2.0.0"
python = "^3.11"
falcon = "^3.1.1"
dynaconf = "^3.1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
